// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> when there is a return link matches the snapshot 1`] = `
<body>
  <div>
    <div
      class="grow"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed static z-0 -mx-6 mb-0 w-screen sm:mx-0 sm:w-full sm:rounded-md mui-fixed css-2naa7r-MuiPaper-root-MuiAppBar-root"
        data-testid="TitleBar"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-129s0w6-MuiToolbar-root"
        >
          <div
            class="-ml-4 mr-2"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-aem3qp-MuiButtonBase-root-MuiIconButton-root"
              data-testid="ArrowBackIconButton"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hgpioi-MuiSvgIcon-root"
                color="white"
                data-testid="ArrowBack"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 grow css-7sb4ws-MuiTypography-root"
          >
            <label
              class="m-0 align-middle font-normal"
              title="Test Title 2"
            >
              <div
                class="line-clamp-2"
              >
                Test Title 2
              </div>
            </label>
          </h5>
        </div>
      </header>
    </div>
    <div
      class="Toastify"
    />
  </div>
</body>
`;

exports[`<PageHeader /> when there is no return link matches the snapshot 1`] = `
<body>
  <div>
    <div
      class="grow"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed static z-0 -mx-6 mb-0 w-screen sm:mx-0 sm:w-full sm:rounded-md mui-fixed css-2naa7r-MuiPaper-root-MuiAppBar-root"
        data-testid="TitleBar"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-129s0w6-MuiToolbar-root"
        >
          <div
            class="-ml-4 mr-2"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 grow css-7sb4ws-MuiTypography-root"
          >
            <label
              class="m-0 align-middle font-normal"
              title="Test Title 1"
            >
              <div
                class="line-clamp-2"
              >
                Test Title 1
              </div>
            </label>
          </h5>
        </div>
      </header>
    </div>
    <div
      class="Toastify"
    />
  </div>
</body>
`;
